kubernetes/service.yaml
apiVersion: apps/v1
kind: Service
apiVersion: v1
metadata:
  name: brickdupbacknd-service
spec:
  selector:
    app: brickdupbacknd
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
